# ShipSentinel

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/shipsentinel/: config.py  main.py
src/shipsentinel/api/: schemas.py
src/shipsentinel/api/routes/: predictions.py  shipments.py
src/shipsentinel/db/: models.py  session.py
src/shipsentinel/ml/: data.py  features.py  predictor.py  trainer.py
src/shipsentinel/schema/: default.yaml
src/shipsentinel/worker/: celery_app.py  tasks.py
tests/: conftest.py
tests/integration/: test_api.py  test_predictions.py
tests/unit/: test_data.py  test_features.py  test_models.py  test_trainer.py
